--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,9 @@ yarn-error.log
 env/
 env__/
 .vscode/symbols.json
-*.sqlite3
-*.sqlite3-journal
+*.db
+*.db-journal
 
 app/static/assets/node_modules
 app/static/assets/yarn.lock
 app/static/assets/.temp
-
-
